odczytywanie z pliku zainplementowane - wymaga debugowania.

--- a/lista.vcxproj
+++ b/lista.vcxproj
@@ -122,6 +122,9 @@
   <ItemGroup>
     <ClInclude Include="lista.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
